# misc_scripts

./: .gitignore  LICENSE  README.MD  README.md
AI_ML/: TimeSeriesWorkShop.ipynb
CsvToDictLib/: csvtodict.py
atop_collector/: atop_collector.service  atop_collector.sh
c-projects/first-app/: main.c
c-projects/first-app/lib/: libcjson.so.1.7.1
certutils/: bundle-reader.py
code_gym/python/ex2/: README.md  make-anagrams.py
code_gym/python/ex3/: ransom-note.py
cpp-scratch/: argument_experiment.cpp
data_analytics_learn/: L1_Starter_Code.ipynb
data_analytics_learn/.ipynb_checkpoints/: L1_Starter_Code-checkpoint.ipynb
data_analytics_learn/link_pandas/: JIRA.csv
data_analytics_learn/link_pandas/.ipynb_checkpoints/: JIRA_Analysis-checkpoint.ipynb
data_analytics_learn/link_py_for_data_analytics/: a1.npy
docker-infra/helloworld/: Dockerfile
e-app/: package.json
e-app/src/: common.css  index.html  main.js  renderer.js
hadoop_scripts/: hadoop-cleaner.py
hadoop_scripts/hadoop_cluster_conf_vbox/: core-site.xml.master
java/filewatcher/: README.md
java/logindexer/: pom.xml
java/qds-sdk-samples/: pom.xml
linux-sysprog/file_apis/writing_to_file/: ADHD behavior  (+1 more)
logindexer/: pom.xml
math-experiments/: a.out  main.cpp  node
myvimrc/: vimrc
playschemas/: udazoo.sql  zoo.sql
powershells/appname-to-csv/: convertappname-to-csv.ps1
prep_and_learning/ami/: amazon.txt  question-bank.md
prep_and_learning/cpp/: CMakeLists.txt
prep_and_learning/dslearn/cpp/: CMakeLists.txt  README.md
prep_and_learning/dslearn/cpp/.metals/: metals.h2.db
prep_and_learning/dslearn/cpp/basic_cpp/: App.hh  Log.hh  SimpleApp.hh  SimpleInheritance.cpp  SimpleInheritance.h  SimpleInheritance.h.gch  logger.cpp  rulespolymorph.cpp  stringops.cpp  syslogtest.cpp
prep_and_learning/dslearn/cpp/include/: App.hh  List.hh  Logger.hh  Node.hh  SimpleApp.hh
prep_and_learning/dslearn/cpp/lists/: DoubleList.hh  ListNode.hh  SingleList.hh
prep_and_learning/dslearn/cpp/simpletests/: ListNodeTest.cpp  NodeTest.cpp  SingleListTest.cpp
prep_and_learning/java/: .project
prep_and_learning/scala/: HelloWorld.scala
python-scripts/CsvToDictLib/: csvtodict.py
python-scripts/data_analytics_learn/: ipython_notebook_tutorial.ipynb
python-scripts/file-header-modifier/: modify-header.py
python-scripts/fsdepth/: README.md  __init__.py  __main__.py  depthfinder.py
python-scripts/sshrunner/: sshrunner.py
rust/loops/: Cargo.toml
rust/ownership/: Cargo.toml
rust/variables/: Cargo.toml
sshrunner/: env.yml
wireshark_captures/: sshservercapture.cap
xenmobile_tools/dbdumpparser/: parsedbdump.py
(+110 files in other folders)
